--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="cardy"><img src="./images/tcs-logo.png" alt="TCS Logo"/>
                     <ul>
                         <li>Verification Officer</li>
-                    </ul></div>
-                    <p style="font-family: EB Garamond;" class="mt-0 pt-0">You can check my <a href="https://farzihotel.my.canva.site/resume">resume</a> for more info :)</p>
+                    </ul><p style="font-family: EB Garamond;" class="mt-0 pt-0">You can check my <a href="https://farzihotel.my.canva.site/resume">resume</a> for more info :)</p></div>
+                    
             
               </div>
             </div>
